plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.5.15'
	id 'org.sonarqube' version '5.1.0.4882'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.owasp.dependencycheck' version '12.1.0' // OWASP Dependency-Check (SCA)
}

group = 'edu.pucmm.cs'
version = '0.0.1-SNAPSHOT'

// Configuración del análisis de calidad en SonarCloud.
// El token se pasa por la variable de entorno SONAR_TOKEN desde el pipeline (no va en el código).
sonar {
	properties {
		property 'sonar.projectKey', 'pucmm-qas-inventory-system'
		property 'sonar.organization', 'qa-pucmm'
		property 'sonar.host.url', 'https://sonarcloud.io'
		// Reporte de cobertura que ya genera JaCoCo (habilita la métrica Coverage).
		property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
		// Se excluyen de la cobertura las mismas clases excluidas en JaCoCo, para que la métrica sea coherente.
		property 'sonar.coverage.exclusions', '**/dto/**,**/infrastructure/persistence/entity/**,**/config/**,**/InventorySystemApplication.java'
	}
}

// Análisis de Composición de Software (SCA) con OWASP Dependency-Check.
// Detecta dependencias con vulnerabilidades públicas conocidas (CVEs) contra la NVD.
// Ejecutar con: ./gradlew dependencyCheckAnalyze  (reporte en build/reports/dependency-check-report.html)
dependencyCheck {
	formats = ['HTML', 'JSON']
	// La API key del NVD evita el rate-limit al descargar la base de vulnerabilidades.
	// Se pasa por la variable de entorno NVD_API_KEY desde el pipeline.
	nvd {
		apiKey = System.getenv('NVD_API_KEY')
		// La API de la NVD es inestable y a veces devuelve respuestas vacías. Estos
		// reintentos y la espera entre peticiones toleran esos fallos transitorios
		// para que el gate solo falle por vulnerabilidades reales, no por la red.
		delay = 6000        // ms de espera entre peticiones a la NVD (reduce rate-limit)
		maxRetryCount = 20  // reintentos ante fallos transitorios de la API
	}
	// Falla el build si existe una dependencia con severidad High/Critical (CVSS >= 7.0).
	failBuildOnCVSS = 7.0
	// Archivo opcional para suprimir falsos positivos.
	suppressionFile = 'dependency-check-suppressions.xml'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	// Cliente de administración de Keycloak: permite crear cuentas y asignar los
	// permisos (realm roles) desde el backend usando una service account.
	implementation 'org.keycloak:keycloak-admin-client:26.0.4'
	implementation 'org.flywaydb:flyway-core:11.8.1'
	implementation 'org.flywaydb:flyway-database-postgresql:11.8.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'org.hibernate.orm:hibernate-envers'
	implementation 'net.logstash.logback:logstash-logback-encoder:8.0' // Para logs estructurados en JSON
	implementation 'com.github.librepdf:openpdf:1.3.39' // Generación programática de PDF
	compileOnly 'org.projectlombok:lombok' // Lombok es una biblioteca que reduce el código boilerplate en Java, como getters, setters, constructores, etc.
	runtimeOnly 'org.postgresql:postgresql:42.7.11'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Incluye dependencias para pruebas unitarias y de integración, como JUnit, Mockito, etc.
	testCompileOnly 'org.projectlombok:lombok' 
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // Necesario para ejecutar pruebas con JUnit Platform
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.security:spring-security-test' // Proporciona utilidades para probar la seguridad en aplicaciones Spring

	testImplementation 'org.springframework.boot:spring-boot-testcontainers' // Proporciona soporte para usar Testcontainers en pruebas de Spring Boot, facilitando la integración de contenedores Doc[...]
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	
	testImplementation 'io.rest-assured:rest-assured' // Para pruebas de API/Contrato

	implementation 'io.micrometer:micrometer-registry-prometheus:1.15.12' // Proporciona soporte para exportar métricas a Prometheus, lo que permite monitorear el rendimiento y la salud de la aplicación ut[...]

}

tasks.named('test') {
	useJUnitPlatform()
}

jacocoTestReport {
	dependsOn test
	reports {
		html.required = true
		xml.required = true
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
				'**/dto/**',
				'**/infrastructure/persistence/entity/**',
				'**/config/**',
				'**/InventorySystemApplication.class'
			])
		}))
	}
}

tasks.named('test') {
	finalizedBy jacocoTestReport
}
